[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sospice"
authors = [
  { name="SPICE consortium", email="spice-github.ias@universite-paris-saclay.fr" },
]
description = "Python data analysis tools for Solar Orbiter/SPICE"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "sospice.__version__"}
dependencies = {file = ["requirements.txt"]}

#[project.optional-dependencies]
#docs = ["sphinx"]

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/solo-spice/sospice/"
"Bug Tracker" = "https://github.com/solo-spice/sospice/issues"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.github
  | \.idea
  | \.pytest_cache
  | build
  | dist
  | docs
  | htmlcov
  | venv
)/
'''

[tool.coverage.run]
omit = [
    "*/tests/*",
    "tests/*",
    "__init__.py",
]
