[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2",
    "astropy>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "numpydoc>=1.4",
    "pandas>=2.0",
    "parfive>=2.0",
    "pre-commit>=3.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "requests>=2.30",
    "scipy>=1.10",
    "setuptools>=45",
    "setuptools_scm[toml]>=7.0",
    "Sphinx>=7.0",
    "sunpy>=4.0",
    "twine>=4.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sospice"
authors = [
  { name="SPICE consortium", email="spice-github.ias@universite-paris-saclay.fr" },
]
description = "Python data analysis tools for Solar Orbiter/SPICE"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
exclude = ["local"]

[tool.setuptools.dynamic]
version = {attr = "sospice.__version__"}
dependencies = {file = ["requirements.txt"]}

#[project.optional-dependencies]
#docs = ["sphinx"]

[tool.setuptools_scm]
write_to = "sospice/_version.py"

[project.urls]
"Homepage" = "https://github.com/solo-spice/sospice/"
"Bug Tracker" = "https://github.com/solo-spice/sospice/issues"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.github
  | \.idea
  | \.pytest_cache
  | build
  | dist
  | docs
  | htmlcov
  | venv
)/
'''

[tool.coverage.run]
omit = [
    "*/tests/*",
    "tests/*",
    "__init__.py",
]
