[build-system]
  requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sospice"
authors = [
  { name="SPICE consortium", email="spice-github.ias@universite-paris-saclay.fr" },
]
description = "Python data analysis tools for Solar Orbiter/SPICE"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
exclude = ["local"]

[tool.setuptools.dynamic]
version = {attr = "sospice._version.__version__"}
dependencies = {file = ["requirements.txt"]}

#[project.optional-dependencies]
#docs = ["sphinx"]

[tool.setuptools_scm]
write_to = "sospice/_version.py"

[project.urls]
"Homepage" = "https://github.com/solo-spice/sospice/"
"Bug Tracker" = "https://github.com/solo-spice/sospice/issues"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.github
  | \.idea
  | \.pytest_cache
  | build
  | dist
  | docs
  | htmlcov
  | venv
)/
'''

[tool.coverage.run]
omit = [
    "*/tests/*",
    "tests/*",
    "__init__.py",
]

[tool.towncrier]
package = "sospice"
filename = "CHANGELOG.rst"
package_dir = "."
directory = "changelog/"
issue_format = "`#{issue} <https://github.com/solo-spice/sospice/pull/{issue}>`__"
title_format = "{version} ({project_date})"

[[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

[[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

[[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

[[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

[[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

[[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

[[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
